feat: enhance SEO structured data and improve site representation with alternate names

--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
     {
       "@context": "https://schema.org",
       "@type": "Organization",
+      "@id": "https://sahwa.space/#organization",
       "name": "صحوة",
-      "alternateName": "Sahwa",
+      "alternateName": ["صحوة","Sahwa","Sah7a","صحوه"],
       "url": "https://sahwa.space",
       "logo": "https://sahwa.space/logo.png",
       "description": "مبادرة شبابية طلابية في تركيا تهدف لتكوين جيل واعٍ يحمل هم الأمة وإحياء الهوية الإسلامية في الجامعات",
@@ -94,14 +95,18 @@
     {
       "@context": "https://schema.org",
       "@type": "WebSite",
+      "@id": "https://sahwa.space/#website",
       "name": "صحوة",
-      "alternateName": "Sahwa Initiative",
+      "alternateName": ["صحوة","Sahwa","Sah7a","صحوه"],
       "url": "https://sahwa.space",
       "inLanguage": "ar",
       "potentialAction": {
         "@type": "SearchAction",
         "target": "https://sahwa.space/?q={search_term_string}",
         "query-input": "required name=search_term_string"
+      },
+      "publisher": {
+        "@id": "https://sahwa.space/#organization"
       }
     }
     </script>
