feat: update alternate names and available languages in structured data for improved SEO

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       "@type": "Organization",
       "@id": "https://sahwa.space/#organization",
       "name": "صحوة",
-      "alternateName": ["صحوة","Sahwa","Sah7a","صحوه"],
+      "alternateName": ["شباب تركيا صحوة","صحوة","Sahwa","Sah7a","صحوه"],
       "url": "https://sahwa.space",
       "logo": "https://sahwa.space/logo.png",
       "description": "مبادرة شبابية طلابية في تركيا تهدف لتكوين جيل واعٍ يحمل هم الأمة وإحياء الهوية الإسلامية في الجامعات",
@@ -77,7 +77,7 @@
         "telephone": "+905345195501",
         "email": "sahwa.org.tr@gmail.com",
         "contactType": "customer service",
-        "availableLanguage": ["Arabic", "Turkish"]
+        "availableLanguage": ["Arabic", "Turkish", "English"]
       },
       "address": {
         "@type": "PostalAddress",
